--- a/config/mopidy/mopidy.conf
+++ b/config/mopidy/mopidy.conf
@@ -1,17 +1,14 @@
 # For further information about options in this file see:
-#   http://docs.mopidy.com/
+#   https://docs.mopidy.com/
 #
 # The initial commented out values reflect the defaults as of:
-#   Mopidy 2.3.1
-#   Mopidy-File 2.3.1
-#   Mopidy-HTTP 2.3.1
-#   Mopidy-Local 2.3.1
-#   Mopidy-M3U 2.3.1
-#   Mopidy-MPD 2.3.1
-#   Mopidy-SoftwareMixer 2.3.1
-#   Mopidy-SoundCloud 2.1.0
-#   Mopidy-Stream 2.3.1
-#   Mopidy-YouTube 2.0.2
+#   Mopidy 3.1.1
+#   Mopidy-File 3.1.1
+#   Mopidy-HTTP 3.1.1
+#   Mopidy-M3U 3.1.1
+#   Mopidy-SoftwareMixer 3.1.1
+#   Mopidy-Spotify 4.1.0
+#   Mopidy-Stream 3.1.1
 #
 # Available options and defaults might have changed since then,
 # run `mopidy config` to see the current effective config and
@@ -25,10 +22,9 @@
 #restore_state = false
 
 [logging]
+#verbosity = 0
+#format = %(levelname)-8s %(asctime)s [%(process)d:%(threadName)s] %(name)s\n  %(message)s
 #color = true
-#console_format = %(levelname)-8s %(message)s
-#debug_format = %(levelname)-8s %(asctime)s [%(process)d:%(threadName)s] %(name)s\n  %(message)s
-#debug_file = mopidy.log
 #config_file =
 
 [audio]
@@ -43,50 +39,6 @@
 #port = 
 #username = 
 #password = 
-
-[mpd]
-enabled = true
-hostname = 127.0.0.1
-port = 6600
-#password = 
-#max_connections = 20
-#connection_timeout = 60
-#zeroconf = Mopidy MPD server on $hostname
-#command_blacklist = 
-#  listall
-#  listallinfo
-#default_playlist_scheme = m3u
-
-[http]
-#enabled = true
-#hostname = 127.0.0.1
-#port = 6680
-#static_dir =
-#zeroconf = Mopidy HTTP server on $hostname
-#allowed_origins = 
-#csrf_protection = true
-
-[stream]
-#enabled = true
-#protocols = 
-#  http
-#  https
-#  mms
-#  rtmp
-#  rtmps
-#  rtsp
-#metadata_blacklist = 
-#timeout = 5000
-
-[m3u]
-#enabled = true
-#base_dir =
-#default_encoding = latin-1
-#default_extension = .m3u8
-#playlists_dir =
-
-[softwaremixer]
-#enabled = true
 
 [file]
 #enabled = true
@@ -108,29 +60,58 @@ port = 6600
 #follow_symlinks = false
 #metadata_timeout = 1000
 
-[local]
-enabled = true
-#library = json
-media_dir = ~/music
-#scan_timeout = 1000
-#scan_flush_threshold = 100
-#scan_follow_symlinks = false
-#excluded_file_extensions = 
-#  .directory
-#  .html
-#  .jpeg
-#  .jpg
-#  .log
-#  .nfo
-#  .pdf
-#  .png
-#  .txt
-#  .zip
+[http]
+#enabled = true
+#hostname = 127.0.0.1
+#port = 6680
+#zeroconf = Mopidy HTTP server on $hostname
+#allowed_origins = 
+#csrf_protection = true
+#default_app = mopidy
 
-[youtube]
+[m3u]
+#enabled = true
+#base_dir = $XDG_MUSIC_DIR
+#default_encoding = latin-1
+#default_extension = .m3u8
+#playlists_dir =
+
+[softwaremixer]
 #enabled = true
 
-[soundcloud]
-auth_token = 3-35204-729851842-yNONfUAqAoryjFo
+[stream]
+#enabled = true
+#protocols = 
+#  http
+#  https
+#  mms
+#  rtmp
+#  rtmps
+#  rtsp
+#metadata_blacklist = 
+#timeout = 5000
+
+[spotify]
 enabled = true
-explore_songs = 25
+client_id = 2ea2541b-5949-4d86-a017-21dfc871d301
+client_secret = m6EUAa0ix3oDL70X5ykZ5Ao1vq9kSFUELXCUdfd0vbI=
+username = shidima
+password = "^9puDk*B^K9$6DgZ*kr9UxSu@"
+#client_id = 
+#client_secret = 
+#bitrate = 160
+volume_normalization = true
+#private_session = false
+#timeout = 10
+allow_cache = true
+allow_network = true
+allow_playlists = true
+search_album_count = 20
+search_artist_count = 10
+search_track_count = 50
+#toplist_countries =
+
+[mpd]
+hostname = ::
+enabled = true
+
