--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,8 @@
+#globinclude kitty.d/**/*.conf
 include ./OneDark.conf
 font_size 12.0
 font_family      JetBrainsMono Nerd Font Mono
+#font_family    Cascadia Code 
 #font_family      RandyGG Regular 
 #font_family       JetBrainsMono-Bold
 #font_family       Hack Nerd Font
@@ -10,7 +12,11 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-background_opacity 0.90
+#background_opacity 0.90
 window_padding_width 8.0
 enable_audio_bell no
 editor nvim
+
+# Keymaps
+map ctrl+shift+f5 load_config_file
+map ctrl+shift+f6 debug_config
