Enable HTTP for mopidy

--- a/config/mopidy/mopidy.conf
+++ b/config/mopidy/mopidy.conf
@@ -61,13 +61,13 @@
 #metadata_timeout = 1000
 
 [http]
-#enabled = true
-#hostname = 127.0.0.1
-#port = 6680
-#zeroconf = Mopidy HTTP server on $hostname
-#allowed_origins = 
-#csrf_protection = true
-#default_app = mopidy
+enabled = true
+hostname = 127.0.0.1
+port = 6680
+zeroconf = Mopidy HTTP server on $hostname
+allowed_origins = 
+csrf_protection = true
+default_app = mopidy
 
 [m3u]
 #enabled = true
@@ -115,3 +115,5 @@ search_track_count = 50
 hostname = ::
 enabled = true
 
+[youtube]
+enabled = true
