fix: Update Kitty config

--- a/Configs/kitty/.config/kitty/kitty.conf
+++ b/Configs/kitty/.config/kitty/kitty.conf
@@ -1,14 +1,13 @@
 #globinclude kitty.d/**/*.conf
-include ./OneDark.conf
-font_size 12.0
-font_family      JetBrainsMono Nerd Font Mono
-#font_family    Cascadia Code 
-#font_family      RandyGG Regular 
-#font_family       JetBrainsMono-Bold
-#font_family       Hack Nerd Font
-#font_family      FiraCode-Regular
-#font_family      Iosevka-Extended 
-#font_family FiraCode Nerd Font Mono
+font_size 16.0
+font_family     JetBrainsMono Nerd Font Mono
+#font_family     Cascadia Code 
+#font_family     RandyGG Regular 
+#font_family     JetBrainsMono-Bold
+#font_family     Hack Nerd Font
+#font_family     FiraCode-Regular
+#font_family     Iosevka-Extended 
+#font_family      FiraCode Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -21,3 +20,9 @@ editor nvim
 # Keymaps
 map ctrl+shift+f5 load_config_file
 map ctrl+shift+f6 debug_config
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Macchiato
+include current-theme.conf
+# END_KITTY_THEME
