fix: Update tmux config

--- a/Configs/tmux/.config/tmux/tmux.conf
+++ b/Configs/tmux/.config/tmux/tmux.conf
@@ -1,4 +1,8 @@
+# Use zsh as default
+set-option -g default-shell /bin/zsh
+
 # Set true color
+set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Enable mouse
@@ -28,6 +32,14 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Split horizontally in CWD with \
+unbind %
+bind '\' split-window -h -c "#{pane_current_path}"
+
+# Split vertically in CWD with -
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
 
 # Open panes in current directory
 bind '-' split-window -v -c "#{pane_current_path}"
